[tool.poetry]
name = "min-5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "min"}]

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.2.1"
openai = "1.3.7"
promptbench = "^0.0.3"
llmlingua = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
